<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mi_ros2</name>
  <version>0.1.0</version>
  <description>
    This packages provices the driver for MICROINFINITY XG6000 IMU sensor.
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>serial</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>